# kbot_mxnet

./: README.md  build.gradle  settings.gradle
jni/: .gitignore  CMakeLists.txt
jni/cmake/: FindMxnet.cmake
jni/src/: MXNetwork.cpp  MXNetwork.h  kbot_mxnet_MXNetwork.cpp  kbot_mxnet_MXNetwork.h  mxnet_benchmark1D.cpp  mxnet_test_leaks.cpp  mxnet_test_train1D.cpp  mxnet_test_train2D.cpp
src/main/java/kbot/mxnet/: MXContext.java  MXNetwork.java  MXNetworkDispose.java
src/test/java/kbot/mxnet/: TestCleaning.java  TestMXNetwork.java
